compiler/test/fail/dec_des_obj_spread.js
// The rest operator is not supported
const foo = {
  a: 10,
  b: 20,
  c: 30,
};

const { a, ...others } = foo;
